--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "element-plus": "^2.3.8",
+    "nprogress": "^0.2.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
