--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,5 +1,5 @@
-{
-    "compilerOptions": {
-      "types": ["element-plus/global"]
-    }
-}
+// {
+//     "compilerOptions": {
+//       "types": ["element-plus/global"]
+//     }
+// }
