--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "element-plus": "^2.3.8",
+    "eslint": "^8.45.0",
     "nprogress": "^0.2.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
