--- a/web/package.json
+++ b/web/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "codemirror": "^6.0.1",
+    "codemirror-editor-vue3": "^2.3.0",
     "element-plus": "^2.3.8",
     "eslint": "^8.45.0",
+    "js-yaml": "^4.1.0",
+    "json2yaml": "^1.1.0",
     "nprogress": "^0.2.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
