--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,9 @@
     "json2yaml": "^1.1.0",
     "nprogress": "^0.2.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "xterm": "^5.2.1",
+    "xterm-addon-fit": "^0.7.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
