--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.4.0",
     "codemirror": "^6.0.1",
     "codemirror-editor-vue3": "^2.3.0",
+    "echarts": "^5.4.3",
     "element-plus": "^2.3.8",
     "eslint": "^8.45.0",
     "js-yaml": "^4.1.0",
