--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "codemirror": "^6.0.1",
     "codemirror-editor-vue3": "^2.3.0",
     "echarts": "^5.4.3",
@@ -16,7 +17,10 @@
     "eslint": "^8.45.0",
     "js-yaml": "^4.1.0",
     "json2yaml": "^1.1.0",
+    "jsonwebtoken": "^9.0.1",
+    "moment": "^2.29.4",
     "nprogress": "^0.2.0",
+    "vite-plugin-optimizer": "^1.4.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
     "xterm": "^5.2.1",
